--- a/UmotaEFaturaWeb/UmotaEFaturaWeb/Shared/UmotaEFaturaWeb.Shared.csproj
+++ b/UmotaEFaturaWeb/UmotaEFaturaWeb/Shared/UmotaEFaturaWeb.Shared.csproj
@@ -9,4 +9,9 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ModelDto\Request\" />
+    <Folder Include="ModelDto\Response\" />
+  </ItemGroup>
 </Project>
